--- a/YamShopExpress/package.json
+++ b/YamShopExpress/package.json
@@ -22,6 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.17",
+    "nodemailer-smtp-transport": "^2.7.4",
     "pug": "2.0.0-beta11"
   }
 }
